# advent-of-code-2021

./: README.md  pyproject.toml
adventofcode/: main.py
tests/: test_adventofcode.py
