[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Solutions for Problems in Advent of Code"
authors = ["Your Name <you@example.com>"]
license = "GNU Public v3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
rich = "^10.16.1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
